--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=gallerist
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.default_schema=gallerist
 spring.datasource.username=postgres
 spring.datasource.password=1234567899A
